--- a/client/src/locales/ru.po
+++ b/client/src/locales/ru.po
@@ -21,13 +21,21 @@ msgstr "Закрыть"
 msgid "Console Output"
 msgstr "Вывод Консоли"
 
-#: src/pages/home/HomeApp.tsx:28
-msgid "Cot Pen"
+#: src/components/HomeButton.tsx:26
+msgid "CotPen"
 msgstr "Кот Карандаш"
 
 #: src/pages/edit/EditApp.tsx:94
 msgid "Dismiss"
 msgstr "Отмена"
+
+#: src/pages/view/ViewApp.tsx:26
+msgid "Edit"
+msgstr "Редактировать"
+
+#: src/components/LoginModal.tsx:54
+msgid "Email"
+msgstr "Почта"
 
 #: src/pages/edit/EditApp.tsx:100
 msgid "File: {selectedFile}"
@@ -37,10 +45,9 @@ msgstr "Файл: {selectedFile}"
 msgid "Fork"
 msgstr "Клонировать"
 
-#. placeholder {0}: lastPublish ? lastPublish : t`Not published yet`
 #: src/pages/edit/EditApp.tsx:103
-msgid "Last published: {0}"
-msgstr "Дата публикации: {0}"
+msgid "Last published"
+msgstr "Дата публикации"
 
 #: src/components/AuthButtons.tsx:15
 msgid "Login"
@@ -49,6 +56,10 @@ msgstr "Войти"
 #: src/components/AuthButtons.tsx:18
 msgid "Logout"
 msgstr "Выйти"
+
+#: src/pages/home/ProjectList.tsx:62
+msgid "My Projects"
+msgstr "Мои проекты"
 
 #: src/components/NewProjectButton.tsx:20
 msgid "New"
@@ -62,7 +73,7 @@ msgstr "Пока не опубликован"
 msgid "Preview"
 msgstr "Просмотр"
 
-#: src/components/PublishButton.tsx:62
+#: src/components/PublishButton.tsx:81
 msgid "Publish"
 msgstr "Опубликовать"
 
@@ -73,6 +84,26 @@ msgstr "Публичный URL"
 #: src/pages/edit/PreviewPanel.tsx:63
 msgid "Run ▶"
 msgstr "Старт ▶"
+
+#: src/components/LoginModal.tsx:70
+msgid "Send"
+msgstr "Отправить"
+
+#: src/components/LoginModal.tsx:44
+msgid "Sign in"
+msgstr "Вход"
+
+#: src/components/HomeButton.tsx:28
+msgid "This is online project editor made by impression of https://codepen.io."
+msgstr "Это приложения для создания, редактирования и публикации небольших онлайн проектов. Создано по мотивам сайта https://codepen.io."
+
+#: src/components/LoginModal.tsx:46
+msgid "To authorize, please enter your email address, then you'll receive a magic link in your inbox."
+msgstr "Чтобы авторизоваться, введите адрес email, после этого вы получите письмо со авторизационной сылкой на приложение"
+
+#: src/pages/home/ProjectList.tsx:56
+msgid "Trends"
+msgstr "Тренды"
 
 #: src/components/PublishedUrlModal.tsx:49
 msgid "View"
